# progetto_intermedio

./: .gitignore  CMakeLists.txt  README.md  README.txt
include/: InertialDriver.h  Lettura.h  Misura.h  MyVector.h  MyVector.hpp  MyVector_no_template.h  inertial_driver.h  lettura.h  misura.h  my_vector.h  my_vector.hpp
src/: InertialDriver.cpp  MyVector.cpp  inertial_driver.cpp  main  main.cpp  misura.cpp  my_vector.cpp
